# sift-data

./: .env  alembic.ini  main.py  pyproject.toml  sift.db
alembic/: env.py
alembic/versions/: bcffcf306ac7_add_document_processing_fields.py  e32de95f9de4_initial_schema.py  e540e730e3be_initial_migration.py
app/: app.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  documents.py
app/core/: security.py
app/db/: session.py
app/models/: base.py  document.py  user.py
app/schemas/: document.py  user.py
app/services/: background.py  extractor.py  parser.py
